<resources>
    <string name="app_name">HOOGi</string>
    <string name="base_url">https://app.hoogi.com</string>
    <string name="naver_api_url">https://openapi.naver.com</string>
    <string name="login">로그인</string>
    <string name="go_login">로그인 하기</string>
    <string name="find_pwd_btn_name">비밀번호 변경 이메일 전송</string>
    <string name="login_forget_email"><u>이메일을 잊으셨나요?</u></string>
    <string name="login_forget_password">비밀번호를 잊으셨나요?</string>
    <string name="or">또는</string>
    <string name="login_terms_of_service">가입하면 당사의 <b>서비스 약관</b>에 동의하고, <b>개인정보 보호정책</b>을(를) 읽어 당사의 데이터 수집, 사용, 공유 방법을 확인했음을 인정하는 것입니다.</string>
    <string name="email_check_info"><b>%s</b>님의 이메일입니다.</string>
    <string name="tour">둘러보기</string>
    <string name="login_register">회원가입</string>
    <string name="send_password_to_email">비밀번호 변경 이메일 전송 완료</string>
    <string name="find_password_email_check_info"><![CDATA[<font color=\'#000000\'><b>%s</b></font>님이 가입 시 등록한 이메일로<br/>비밀번호 변경 링크를 보내드렸어요.]]></string>
    <string name="validity">유효 기간</string>
    <string name="now_register">지금 가입하기</string>
    <string name="whithin_ten_minute">10분 내외</string>
    <string name="no_account">계정 없음</string>
    <string name="revive_account">계정 복구</string>
    <string name="no_account_info_title">방금 입력하신 정보로 가입한 내역이 없어요.</string>
    <string name="no_account_info_content">가입하고 원하는 상품의 정확한 후기 정보를 마음껏 확인하세요!</string>
    <string name="email_check">이메일 확인</string>
    <string name="find_pwd">비밀번호 찾기</string>
    <string name="identity_verification">본인인증</string>
    <string name="email">이메일</string>
    <string name="name">이름</string>
    <string name="ok">확인</string>
    <string name="cancel">취소</string>
    <string name="register">가입하기</string>
    <string name="restrictions_on_use">이용 제한</string>
    <string name="email_auth">이메일 인증</string>
    <string name="email_auth_send">인증 이메일 전송</string>
    <string name="retry_send_email">재전송</string>
    <string name="terms_of_service_header">이용 약관</string>
    <string name="terms_all_agress">약관 전체동의</string>
    <string name="terms_of_identity">개인정보 수집 및 이용에 대한 동의(필수)</string>
    <string name="terms_of_service">서비스 이용약관(필수)</string>
    <string name="terms_of_location">위치정보 이용약관(필수)</string>
    <string name="terms_of_info_noti">이벤트 등 프로모션 알림 메일 수신(선택)</string>
    <string name="btn_identity_verification">본인인증 하기</string>
    <string name="dialog_btn_identity_verification">인증하기</string>
    <string name="agree">동의</string>
    <string name="select">선택</string>
    <string name="restrictions_sorry">죄송합니다.</string>
    <string name="restrictions_sorry_age">HOOGi 연령 기준에 충족하지\n않는 것으로 보입니다.</string>
    <string name="restrictions_sorry_thanks">이용해주셔서 감사합니다.</string>
    <string name="password_hint">비밀번호 (password)</string>
    <string name="email_hint">이메일 (hoogi@Hoogi.com)</string>
    <string name="find_pwd_email_hint">(hoogi@Hoogi.com)</string>
    <string name="name_hint">(Name)</string>
    <string name="nickname_hint">(Nickname)</string>
    <string name="eng_password_hint">(Password)</string>
    <string name="register_header">기본 정보</string>
    <string name="register_profile_photo">프로필 사진 (선택)</string>
    <string name="register_email">이메일 (필수)</string>
    <string name="register_password">비밀번호 (필수)</string>
    <string name="register_password_description">10~16자 / 영문 대소문자, 숫자, 특수문자 중 2가지 이상 조합</string>
    <string name="register_nickname">닉네임 (필수)</string>
    <string name="register_duplicate_nickname">중복된 닉네임입니다.</string>
    <string name="register_cannot_use_nickname">사용할 수 없는 닉네임입니다.</string>
    <string name="register_cannot_use_min_length_nickname">최소 글자수를 충족하지 못하였습니다.</string>
    <string name="register_complete">가입 완료</string>
    <string name="permission_title">회원님에게 정확한 후기를 제공하기 위해 아래 접근권한을 허용을 부탁드려요.</string>
    <string name="permission_footer">위 접근권한은 회원님께 정확한 정보를 제공하기 위해 사용해요. 허용에 동의하지 않으실 경우 서비스 이용이 제한될 수 있어요.</string>
    <string name="plz_input_email">이메일을 입력해주세요.</string>
    <string name="plz_input_password">비밀번호를 입력해주세요.</string>
    <string name="media_all_view">전체보기</string>
    <string name="media_default_profile">기본프로필</string>
    <string name="home">홈</string>
    <string name="search">검색</string>
    <string name="create">후기UP</string>
    <string name="follow">팔로우</string>
    <string name="account">계정</string>
    <string name="profile">프로필</string>
    <string name="hide_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="hoogi_slogan">세상의 모든 후기를 플레이하다</string>
    <string name="search_hoogi">후기를 찾아보세요!</string>
    <string name="today_suggest_hoogi">오늘의 추천 후기</string>
    <string name="toast_category_follow_success">선택하신 카테고리를 팔로우 했어요.</string>
    <string name="default_server_error">네트워크 통신이 원활하지 않습니다.</string>
    <string name="congratulation_register">회원가입을 축하합니다.</string>
    <string name="title">제목</string>
    <string name="close">닫기</string>
    <string name="edit_profile">프로필사진 편집</string>
    <string name="edit_btn">수정하기</string>
    <string name="remove_btn">삭제하기</string>
    <string name="block_btn">차단하기</string>
    <string name="un_block_btn">차단해제</string>
    <string name="popup_auth_email_send">인증 이메일 전송</string>
    <string name="popup_auth_email_send_description">10분 내로 이메일 인증을 진행해주세요.</string>
    <string name="user_marketing_agree_recheck_title">마케팅 수신 동의</string>
    <string name="user_marketing_agree_recheck">마케팅 수신 동의를 철회하면 기존에 제공하던 혜택을 더는 받지 못할 수도 있어요.</string>
    <string name="user_marketing_agree_recheck_ok">혜택받기</string>
    <string name="user_marketing_agree_recheck_cencle">안 받기</string>
    <string name="skip">건너뛰기</string>
    <string name="welcome_hoogi">후기에 오신 것을 환영해요!</string>
    <string name="choice_curious_category">궁금한 카테고리를 골라보세요.</string>
    <string name="setting_choice_curious_category">후기가 궁금한 카테고리를 선택해주세요.</string>
    <string name="choice_max_three">(최대 3개까지 가능)</string>
    <string name="select_complete">선택 완료</string>
    <string name="select_complete_choice">선택 완료 (%d/3)</string>
    <string name="error_max_count_over_cate_select">최대 3개까지 선택 가능합니다.</string>
    <string name="category">카테고리</string>
    <string name="search_hint">검색어를 입력해주세요.</string>
    <string name="what_products_are_you_curious_about">어떤 상품의 후기가 궁금하신가요?</string>
    <string name="recent_search_keyword">최근 검색한 키워드</string>
    <string name="remove_all">전체 삭제</string>
    <string name="write_video_thumb_description"><![CDATA[&middot; 전체보기 버튼을 탭하면 썸네일 화면을 확인할 수 있어요.]]></string>
    <string name="what_product">어떤 상품인가요?</string>
    <string name="product">상품</string>
    <string name="brand">브랜드</string>
    <string name="star_hoogi">별점 후기</string>
    <string name="brand_hint">회원님이 구매한 브랜드</string>
    <string name="add_hoogi_hint">상품평을 자유롭게 써주세요. (최대 500자)</string>
    <string name="point_of_purchase">구매시점</string>
    <string name="add_hoogi">추가후기</string>
    <string name="registration_hoogi">후가등록하기</string>
    <string name="btn_registration">등록하기</string>
    <string name="write_hoogi">후기 작성</string>
    <string name="modify_hoogi">후기 수정</string>
    <string name="optional">(선택)</string>
    <string name="notes_on_registration">등록 유의사항</string>
    <string name="notes_on_modify">수정 유의사항</string>
    <string name="when_buy">언제 구매하셨나요?</string>
    <string name="not_found_brand_info">브랜드 정보 없음</string>
    <string name="product_direct_registration">상품 직접등록</string>
    <string name="product_search">상품명을 검색해주세요!</string>
    <string name="how_about_registering_product_yourself">상품을 직접 등록해주시는 건 어떠세요?</string>
    <string name="no_registered_products_yet">아직 등록된 상품이 없어요.</string>
    <string name="what_product_search">어떤 상품을 찾고 있으신가요?</string>
    <string name="direct_product_registration">상품 직접 등록하기</string>
    <string name="product_direct_registration_header">상품 직접 등록</string>
    <string name="product_direct_registration_brand_hint">상품의 브랜드는 무엇인가요?</string>
    <string name="product_direct_registration_category_hint">상품의 카테고리는 무엇인가요?</string>
    <string name="registration_complete">등록완료</string>
    <string name="recent_add_hoogi_category">최근 후기가 추가된 카테고리</string>
    <string name="go_setting">설정하기</string>
    <string name="hoogi_registration">후기 등록하기</string>
    <string name="hoogi_registration_permission">후기를 등록하려면\n 아래 권한 허용을 진행해주세요.</string>
    <string name="permission_storage_title">저장공간 권한 필요</string>
    <string name="permission_storage_content">영상저장 및 불러오기</string>
    <string name="permission_camera_title">카메라 권한 필요</string>
    <string name="permission_camera_content">영상촬영</string>
    <string name="permission_audio_title">마이크 권한 필요</string>
    <string name="permission_audio_content">영상음성</string>
    <string name="category_empty_title">입력하신 검색어로 카테고리를 찾을 수 없어요.</string>
    <string name="category_empty_sub_title">다른 검색어를 입력해주세요.</string>
    <string name="hoogi_write_success">후기 등록을 완료했어요!</string>
    <string name="hoogi_write_ing">후기를 등록하고 있어요!</string>
    <string name="hoogi_write_video_setting">후기 영상 설정</string>
    <string name="hoogi_write_video_edit">영상 편집</string>
    <string name="hoogi_write_thumbnail_edit">썸네일 수정</string>
    <string name="tooltip_hoogi_write_product_search">후기 영상과 관련된 상품을 검색해주세요!</string>
    <string name="tooltip_hoogi_write_empty_brand">브랜드명을 입력해주시면 더 좋은 후기가 돼요!</string>
    <string name="tooltip_hoogi_write_temporary_storage">임시저장 문구 수정 필요!</string>
    <string name="thumbnail_save_when_video_play_pause">썸네일을 지정하려면 영상을 탭해서 일시정지 해주세요.</string>
    <string name="popularity">인기순</string>
    <string name="latest">최신순</string>
    <string name="search_result">검색결과</string>
    <string name="how_about_review_like_this">이런 후기는 어떠세요?</string>
    <string name="empty_search_result_content_1">선택하신 카테고리에\n아직 등록된 후기가 없어요.</string>
    <string name="empty_text_search_result_content_1">찾으시는 검색어로\n아직 등록된 후기가 없어요.</string>
    <string name="empty_search_result_content_2">지금 바로 첫 후기를 등록해주세요.</string>
    <string name="login_title_1">로그인하면</string>
    <string name="login_title_2">를</string>
    <string name="login_title_3">자유롭게 이용할 수 있어요!</string>
    <string name="sso_login_connect_title">로그인 연동</string>
    <string name="sso_login_connect_content">이미 가입한 이메일 주소로는 로그인 연동만 가능해요.\n\n로그인 연동을 진행할까요?</string>
    <string name="sso_login_connect_complete">로그인 연동을 완료했어요!</string>
    <string name="sso_login_connect_btn">연동하기</string>
    <string name="password_error">비밀번호 오류</string>
    <string name="cur_password">현재 비밀번호</string>
    <string name="new_password">새로운 비밀번호</string>
    <string name="new_re_password">새로운 비밀번호 재입력</string>
    <string name="password_setting">비밀번호 설정</string>
    <string name="password_re_setting">비밀번호 재설정</string>
    <string name="password_re_setting_complete">비밀번호 재설정을 완료했습니다.</string>
    <string name="password_setting_change_complete">비밀번호 변경을 완료했습니다.</string>
    <string name="re_password_validate_false">비밀번호가 일치하지 않습니다.</string>
    <string name="re_password_validate_true">비밀번호가 일치합니다.</string>
    <string name="setting_complete">설정 완료</string>
    <string name="my_profile">내 프로필</string>
    <string name="welcome_hoogi_login">로그인하고 후기를 등록해보세요.</string>
    <string name="video">동영상</string>
    <string name="like">좋아요</string>
    <string name="rank">랭킹</string>
    <string name="rank_unit">등</string>
    <string name="master">마스터</string>
    <string name="what_show_product_hoogi">어떤 상품의 후기를 보여주고 싶으신가요?</string>
    <string name="my_registed_review">내가 등록한 후기</string>
    <string name="my_like_review">좋아요 한 후기</string>
    <string name="no_like_review_yet">아직 좋아요 한 후기가 없어요.</string>
    <string name="search_like_review">마음에 드는 후기를 찾아볼까요?</string>
    <string name="search_hoogi_btn">후기 찾아보기</string>
    <string name="hoogi_registration_and_master_challenge">후기를 등록하고\n마스터에 도전해보세요!</string>
    <string name="profile_edit">프로필 편집</string>
    <string name="save">저장</string>
    <string name="profile_edit_photo">프로필 사진</string>
    <string name="profile_edit_nickname">닉네임</string>
</resources>