<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/selector_bottom_navi_home"
        android:title="@string/home"/>
    <item
        android:id="@+id/newSearchFragment"
        android:icon="@drawable/selector_bottom_navi_search"
        android:title="@string/search"/>
    <item
        android:id="@+id/actionCreate"
        android:title="@string/create"/>
    <item
        android:id="@+id/categoryFollowFragment"
        android:icon="@drawable/selector_bottom_navi_follow"
        android:title="@string/follow"/>
    <item
        android:id="@+id/myProfileFragment"
        android:icon="@drawable/selector_bottom_navi_account"
        android:title="@string/profile"/>

</menu>